applications/cinny/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinny
spec:
  selector:
    app: cinny
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
