applications/cinny/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinny
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: cinny-cinny-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - cinny.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: cinny.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinny
                port:
                  number: 80
